--- a/cmakelists/gdal/gcore/CMakeLists.txt
+++ b/cmakelists/gdal/gcore/CMakeLists.txt
@@ -52,7 +52,8 @@ set_property(TARGET gcore PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 add_library(gdaldrivermanager OBJECT gdaldrivermanager.cpp)
 gdal_standard_includes(gdaldrivermanager)
-target_compile_definitions(gdaldrivermanager PRIVATE -DINST_DATA="${CMAKE_PREFIX_PATH}/${CMAKE_INSTALL_DATADIR}")
+file(TO_CMAKE_PATH "${CMAKE_PREFIX_PATH}/${CMAKE_INSTALL_DATADIR}" INST_DATA_PATH)
+target_compile_definitions(gdaldrivermanager PRIVATE -DINST_DATA="${INST_DATA_PATH}")
 set_property(TARGET gdaldrivermanager PROPERTY POSITION_INDEPENDENT_CODE ON)
 if (HAVE_XERCESC)
   target_include_directories(gdaldrivermanager PRIVATE ${XercesC_INCLUDE_DIRS} ${XercesC_INCLUDE_DIRS}/xercesc)
