Windows searches DLL on PATH not LD_LIBRARY_PATH
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/autotest/cpp/CMakeLists.txt
+++ b/cmakelists/autotest/cpp/CMakeLists.txt
@@ -51,7 +51,8 @@ set(TEST_ENV)
 if (MINGW)
   list(APPEND TEST_ENV SKIP_MEM_INTENSIVE_TEST=YES)
 endif ()
-list(APPEND TEST_ENV LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/gdal:$ENV{LD_LIBRARY_PATH}
+list(APPEND TEST_ENV PATH=${CMAKE_BINARY_DIR}/gdal:$ENV{PATH}
+     LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/gdal:$ENV{LD_LIBRARY_PATH}
      GDAL_DRIVER_PATH=${CMAKE_BINARY_DIR}/gdal/gdalplugins GDAL_DATA=${CMAKE_SOURCE_DIR}/gdal/data)
 add_custom_target(
   test-unit
