--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -85,13 +85,13 @@ jobs:
         run: msys2do pacman -S --noconfirm mingw-w64-x86_64-proj mingw-w64-x86_64-geos mingw-w64-x86_64-hdf5 mingw-w64-x86_64-netcdf mingw-w64-x86_64-openjpeg mingw-w64-x86_64-poppler mingw-w64-x86_64-libtiff mingw-w64-x86_64-libpng mingw-w64-x86_64-xerces-c mingw-w64-x86_64-libxml2 mingw-w64-x86_64-libfreexl mingw-w64-x86_64-libgeotiff mingw-w64-x86_64-libspatialite mingw-w64-x86_64-libtiff mingw-w64-x86_64-pcre mingw-w64-x86_64-postgresql mingw-w64-x86_64-zstd mingw-w64-x86_64-crypto++ mingw-w64-x86_64-cgal mingw-w64-x86_64-jasper
       - name: Install cmake, numpy, and pytest
         run: msys2do pacman -S --noconfirm  mingw-w64-x86_64-python-numpy mingw-w64-x86_64-python-pytest mingw-w64-x86_64-cmake
-      - name: Install python dependenccies
+      - name: deploy cmake scripts to gdal project
+        run: msys2do python $GITHUB_WORKSPACE/gdal/cmake4gdal/deploy.py
+      - name: Install python dependencies for autotest
         run: |
           msys2do python -m ensurepip --upgrade
           msys2do python -m pip install -U wheel setuptools numpy
           msys2do python -m pip install -r $GITHUB_WORKSPACE/gdal/autotest/requirements.txt
-      - name: deploy cmake scripts to gdal project
-        run: msys2do python $GITHUB_WORKSPACE/gdal/cmake4gdal/deploy.py
       - name: Configure
         run: cmake -G "${env:generator}" -C "${env:GITHUB_WORKSPACE}\${env:CONFIGURATION}" "-DCMAKE_PREFIX_PATH=$env:GITHUB_WORKSPACE\msys64\mingw64" "-DCMAKE_UNITY_BUILD=${env:UNITY_BUILD}" -S "${env:GITHUB_WORKSPACE}\gdal" -B "${env:GITHUB_WORKSPACE}\build"
       - name: Build
