PG: add recent PG module
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/ogr/ogrsf_frmts/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/CMakeLists.txt
@@ -98,7 +98,7 @@ ogr_dependent_driver(carto CARTO "OGR_ENABLE_PGDUMP")
 ogr_dependent_driver(ingress INGRESS "HAVE_INGRESS")
 ogr_dependent_driver(ili ILI "HAVE_XERCESC")
 ogr_dependent_driver(mysql MySQL "HAVE_MYSQL")
-ogr_dependent_driver(pg PostGIS "HAVE_POSTGRESQL;OGR_ENABLE_PGDUMP")
+ogr_dependent_driver(pg PostGIS "PostgreSQL_FOUND;OGR_ENABLE_PGDUMP")
 ogr_dependent_driver(geomedia GEOMEDIA "ODBC_FOUND")
 ogr_dependent_driver(mssqlspatial MSSQLSPATIAL "ODBC_FOUND")
 ogr_dependent_driver(odbc ODBC "ODBC_FOUND")
