Revert "excape INIFNITY_XERCES not found error"
This reverts commit 32df7797e3b25b6dca80f3715e82410647a7d0c0.

--- a/cmakelists/gdal/ogr/ogrsf_frmts/gml/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/gml/CMakeLists.txt
@@ -31,7 +31,7 @@ if (HAVE_EXPAT)
 endif ()
 if (HAVE_XERCESC)
   target_include_directories(ogr_GML PRIVATE ${XercesC_INCLUDE_DIRS} ${XercesC_INCLUDE_DIRS}/xercesc)
-  target_compile_definitions(ogr_GML PRIVATE -DHAVE_XERCES=1 -DINFINITY_XERCES=INFINITY)
+  target_compile_definitions(ogr_GML PRIVATE -DHAVE_XERCES)
   gdal_target_link_libraries(TARGET ogr_GML LIBRARIES XercesC::XercesC)
 endif ()
 if (HAVE_SQLITE3)
