--- a/cmakelists/gdal/CMakeLists.txt
+++ b/cmakelists/gdal/CMakeLists.txt
@@ -42,7 +42,7 @@ endif ()
 add_library(gdal gcore/gdal.h)
 add_library(GDAL_LINK_LIBRARY INTERFACE)
 target_link_libraries(gdal PRIVATE $<TARGET_NAME:GDAL_LINK_LIBRARY>)
-set_property(TARGET gdal PROPERTY PLUGIN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/gdalplugins)
+set_property(TARGET gdal PROPERTY PLUGIN_OUTPUT_DIR $<TARGET_FILE_DIR:gdal>/gdalplugins)
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/gdalplugins)
 
 # Set project and C++ Standard properties
