--- a/cmakelists/autotest/cpp/CMakeLists.txt
+++ b/cmakelists/autotest/cpp/CMakeLists.txt
@@ -51,9 +51,18 @@ set(TEST_ENV)
 if (MINGW)
   list(APPEND TEST_ENV SKIP_MEM_INTENSIVE_TEST=YES)
 endif ()
-list(APPEND TEST_ENV PATH=$<TARGET_FILE_DIR:gdal>:$ENV{PATH}
-     LD_LIBRARY_PATH=$<TARGET_FILE_DIR:gdal>:$ENV{LD_LIBRARY_PATH}
-     GDAL_DRIVER_PATH=${CMAKE_BINARY_DIR}/gdal/gdalplugins GDAL_DATA=${CMAKE_SOURCE_DIR}/gdal/data)
+if (WIN32)
+  set(ENVSEP ";")
+else ()
+  set(ENVSEP ":")
+endif ()
+file(TO_NATIVE_PATH $<TARGET_FILE_DIR:gdal> GDAL_OUTPUT_DIR)
+get_property(_plugindir TARGET gdal PROPERTY PLUGIN_OUTPUT_DIR)
+file(TO_NATIVE_PATH "${_plugindir}" GDAL_DRIVER_PATH)
+file(TO_NATIVE_PATH "${CMAKE_SOURCE_DIR}/gdal/data" GDAL_DATA)
+list(APPEND TEST_ENV PATH="${GDAL_OUTPUT_DIR}${ENVSEP}$ENV{PATH}"
+     LD_LIBRARY_PATH="${GDAL_OUTPUT_DIR}:$ENV{LD_LIBRARY_PATH}" GDAL_DRIVER_PATH="${GDAL_DRIVER_PATH}"
+     GDAL_DATA="${GDAL_DATA}")
 add_custom_target(
   test-unit
   COMMAND ${CMAKE_COMMAND} -E env ${TEST_ENV} $<TARGET_FILE:gdal_unit_test>
