--- a/cmakelists/gdal/alg/internal_libqhull/CMakeLists.txt
+++ b/cmakelists/gdal/alg/internal_libqhull/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(
 include(GdalStandardIncludes)
 gdal_standard_includes(qhull)
 set_property(TARGET qhull PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET qhull PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 if (MSVC)
   target_compile_definitions(qhull PRIVATE -D_USE_MATH_DEFINES)
   if (CMAKE_CL_64)
