--- a/cmakelists/gdal/frmts/gif/giflib/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/gif/giflib/CMakeLists.txt
@@ -9,4 +9,5 @@ add_library(
   gif_lib.h
   gif_lib_private.h)
 set_property(TARGET giflib PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET giflib PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(GDAL_LINK_LIBRARY INTERFACE giflib)
