--- a/cmakelists/gdal/frmts/mrf/libLERC/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/mrf/libLERC/CMakeLists.txt
@@ -11,4 +11,5 @@ add_library(
   TImage.hpp)
 target_include_directories(liblerc PRIVATE $<TARGET_PROPERTY:cpl,SOURCE_DIR> $<TARGET_PROPERTY:cpl,BINARY_DIR>)
 set_property(TARGET liblerc PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET liblerc PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(GDAL_LINK_LIBRARY INTERFACE liblerc)
