--- a/cmakelists/gdal/frmts/png/libpng/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/png/libpng/CMakeLists.txt
@@ -22,4 +22,5 @@ else ()
   target_link_libraries(GDAL_LINK_LIBRARY INTERFACE ${ZLIB_LIBRARIES})
 endif ()
 set_property(TARGET libpng PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET libpng PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(GDAL_LINK_LIBRARY INTERFACE libpng)
