--- a/cmakelists/gdal/frmts/pds/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/pds/CMakeLists.txt
@@ -10,8 +10,8 @@ add_gdal_driver(
           vicarkeywordhandler.cpp
   BUILTIN)
 if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.16)
-  set_property(SOURCE isis2dataset.cpp isis3dataset.cpp pdsdataset.cpp vicardataset.cpp
-               PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
+  set_property(SOURCE isis2dataset.cpp isis3dataset.cpp pdsdataset.cpp vicardataset.cpp vicarkeywordhandler.cpp
+                      nasakeywordhandler.cpp PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
 endif ()
 gdal_standard_includes(gdal_PDS)
 target_include_directories(
