--- a/cmakelists/autotest/cpp/CMakeLists.txt
+++ b/cmakelists/autotest/cpp/CMakeLists.txt
@@ -56,9 +56,11 @@ if (WIN32)
 else ()
   set(ENVSEP ":")
 endif ()
-file(TO_NATIVE_PATH $<TARGET_FILE_DIR:gdal> GDAL_OUTPUT_DIR)
-get_property(_plugindir TARGET gdal PROPERTY PLUGIN_OUTPUT_DIR)
-file(TO_NATIVE_PATH "${_plugindir}" GDAL_DRIVER_PATH)
+# FIXME: better handling of output path w/o hard coded.
+## set(GDAL_OUTPUT_DIR "$<TARGET_PROPERTY:gdal,LIBRARY_OUTPUT_DIRECTORY>")
+file(TO_NATIVE_PATH "${CMAKE_BINARY_DIR}/gdal" GDAL_OUTPUT_DIR)
+## set(GDAL_DRIVER_PATH "$<TARGET_PROPERTY:gdal,PLUGIN_OUTPUT_DIR")
+file(TO_NATIVE_PATH "${CMAKE_BINARY_DIR}/gdal/gdalplugins" GDAL_DRIVER_PATH)
 file(TO_NATIVE_PATH "${CMAKE_SOURCE_DIR}/gdal/data" GDAL_DATA)
 list(APPEND TEST_ENV PATH="${GDAL_OUTPUT_DIR}${ENVSEP}$ENV{PATH}"
      LD_LIBRARY_PATH="${GDAL_OUTPUT_DIR}:$ENV{LD_LIBRARY_PATH}" GDAL_DRIVER_PATH="${GDAL_DRIVER_PATH}"
