--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -59,7 +59,7 @@ jobs:
   build-windows-msys2-mingw:
     runs-on: windows-latest
     env:
-      generator: MINGW Makefile
+      generator: MinGW Makefiles
       CONFIGURATION: "gdal\\cmake4gdal\\configurations\\windows.cmake"
       JAVA_HOME: "C:\\Program Files\\Java\\zulu-11-azure-jdk_11.33.15-11.0.4-win_x64"
       MSYS2_PATH_TYPE: inherit
